# pxshot-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
examples/: basic.rs  full_page.rs
src/: client.rs  error.rs  lib.rs  types.rs
