[package]
name = "pxshot"
version = "0.1.0"
edition = "2021"
authors = ["Pxshot <hello@pxshot.com>"]
description = "Official Rust SDK for the Pxshot screenshot API"
documentation = "https://docs.rs/pxshot"
homepage = "https://pxshot.com"
repository = "https://github.com/pxshot/pxshot-rust"
readme = "README.md"
license = "MIT"
keywords = ["screenshot", "api", "pxshot", "web", "capture"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
blocking = ["reqwest/blocking"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
